--- a/TODO
+++ b/TODO
@@ -2,3 +2,6 @@
 2. Some parts of the message can(should?) be templatized:
    - date (easy)
    - timestamp (hard)
+3. Different result types (easy)
+4. EBCDIC
+5. Tolerate bad XML (+RFH) in results
