--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 2. Support data EBCDIC format (readable diff)
 3. Creating screencast-tutorial
 4. Introduce "tags" into Expected Results: current date, msg id
+5. Start/stop individual flows
+6. Group tests (scalability)
