--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Major features:
 - Comparing expected and actual results
 - Saving WMQMB trace, either normal or debug level
 - Processing of message body and MQRFH2 header, plain and XML
-- Running SQL commands before and after the test
+- Running SQL commands before and after the test (Oracle and DB2 supported)
 - Support for running in Linux and Windows (using Cygwin)
 
 For usage details, see the comments in the script
