--- a/README
+++ b/README
@@ -8,5 +8,6 @@ Major features:
 - Processing of message body and MQRFH2 header, plain and XML
 - Running SQL commands before and after the test (Oracle and DB2 supported)
 - Support for running in Linux and Windows (using Cygwin)
+- Input from WMQ queue, filesystem (WMBv7+)
 
 For usage details, see the comments in the script
